<resources>
    <string name="login">Login</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="reset_password">Reset Password</string>
    <string name="app_name">m-Toshokan</string>
    <string name="selamat_datang">Selamat datang,</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="remaining_time">%1$d Hari lagi</string>
    <string name="overdue_time">%1$d Hari terlewat</string>
    <string name="show_all">Lihat Semua</string>
    <string name="borrowing_books">Buku Yang Sedang Dipinjam</string>
    <string name="history_borrowed_books">Riwayat Buku Dipinjam</string>
    <string name="find_books">Cari Buku</string>
    <string name="naufal">Muhammad Naufal Fadhillah</string>
    <string name="your_pinalty">Denda Kamu</string>
    <string name="rp_money">Rp. 20.000,-</string>
    <string name="notification">Notifikasi</string>
    <string name="your_history">Riwayat Pencarian</string>
    <string name="search_with_keywords">Pencarian dengan kata kunci</string>
    <string name="searching">Pencarian</string>
    <string name="synopsis">Sinopsis</string>
    <string name="specification">Spesifikasi</string>
    <string name="title">Judul</string>
    <string name="writer">Penulis</string>
    <string name="isbn">ISBN</string>
    <string name="isbn_n">ISBN %1$s</string>
    <string name="publisher">Penerbit</string>
    <string name="book_type">Jenis Buku</string>
    <string name="book_availability">Status Buku</string>
    <string name="available">Tersedia</string>
    <string name="unavailable">Kosong</string>
    <string name="range_date">%1$td %1$tB %1$tY - %2$td %2$tB %2$tY</string>
    <string name="not_yet_borrowed">Belum ada yang meminjam</string>
    <string name="sort_by">Urutkan berdasarkan</string>
    <string name="book_location">Lokasi</string>
    <string name="borrowing_information">Informasi Peminjaman</string>
    <string name="borrowing_date">Tanggal Pinjam</string>
    <string name="return_date">Tanggal Pengembalian</string>
    <string name="pinalty">Denda</string>
    <string name="borrowing">Peminjaman</string>
    <string name="money_rp">Rp %1$,d</string>
    <string name="date_format">%1$td %1$tB %1$tY</string>
    <string name="empty_bookmark">Tidak ada penanda</string>
    <string name="save">Simpan</string>
    <string name="bookmark_title">Judul Penanda</string>
    <string name="bookmark_description">Deskripsi Penanda</string>
    <string name="photo">Foto</string>
    <string name="add_photo">Tambah Foto</string>
    <string name="bookmark">Pendanda</string>
    <string name="add_penanda">Tambah Penanda</string>
    <string name="logout">Keluar</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="book_cover">book cover</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="activity_edit_full_name_title">Ubah Nama</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="retype_password">Ketik Ulang Kata Sandi</string>
    <string name="activity_edit_password_title">Ubah Kata Sandi</string>
    <string name="profile_photo">Foto Profile</string>
    <string name="insert_book_code_manual">Masukkan Kode Buku Manual</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="select_camera">Pilih Kamera</string>
    <string name="manual_book_code">Kode Buku Manual</string>
    <string name="offline_network">Jaringan mati / offline</string>
    <string name="borrow">Pinjam</string>
    <string name="cancel">Batal</string>
    <string name="money">Rp %1$s</string>
    <string name="returning_status">Status Pengembalian</string>
    <string name="return_yes">Sudah</string>
    <string name="return_no">Belum</string>
</resources>
