<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="sharedBookViewModel"
                type="com.dicoding.naufal.mtoshokan.ui.book.SharedBookViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/default_margin"
                android:descendantFocusability="blocksDescendants"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/synopsis"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorBlackPlaceHolder"/>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_sysnopsis"
                    android:layout_marginTop="@dimen/card_vertical_margin"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/card_horizontal_radius"
                    app:cardElevation="2dp">

                <TextView
                        android:id="@+id/txt_synopsis"
                        android:layout_margin="@dimen/card_vertical_margin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet .Lorem ipsum dolor sit amet"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specification"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorBlackPlaceHolder"/>


            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_specification"
                    android:layout_marginTop="@dimen/card_vertical_margin"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/card_horizontal_radius"
                    app:cardElevation="2dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/title"/>

                    <TextView
                            android:id="@+id/txt_spec_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="Hyouka"/>

                    <View style="@style/Divider"/>

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/writer"/>

                    <TextView
                            android:id="@+id/txt_spec_writer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="Yonezawa Honobu"/>

                    <View style="@style/Divider"/>


                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/isbn"/>

                    <TextView
                            android:id="@+id/txt_spec_ISBN"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="9786026383396"/>

                    <View style="@style/Divider"/>

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/publisher"/>

                    <TextView
                            android:id="@+id/txt_spec_publisher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="Penerbit Haru"/>

                    <View style="@style/Divider"/>

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/book_type"/>

                    <TextView
                            android:id="@+id/txt_spec_book_type"
                            style="@style/BookTypeChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            tools:text="Novel"/>

                    <View style="@style/Divider"/>

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/book_location"/>

                    <TextView
                            android:id="@+id/txt_spec_book_location"
                            style="@style/BookTypeChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            tools:text="F5-13"/>

                    <View style="@style/Divider"/>

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/book_availability"/>

                    <TextView
                            android:id="@+id/txt_spec_book_availability"
                            style="@style/CustomChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_marginBottom="@dimen/default_margin"
                            tools:text="@string/available"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>