<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.dicoding.naufal.mtoshokan.ui.ui.borrowing.BorrowingActivity">


    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapseToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_header"
                    android:layout_width="match_parent"
                    android:clipToPadding="false"
                    android:layout_height="285dp"
                    android:background="@color/white"
                    android:paddingBottom="15dp"
                    app:layout_collapseMode="none"
                    app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraint_header_with_background"
                        android:paddingTop="?android:actionBarSize"
                        android:layout_width="match_parent"
                        android:background="@drawable/background_gradient_header"
                        android:layout_height="280dp"
                        app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                                android:id="@+id/img_cover"
                                android:layout_width="120dp"
                                android:layout_height="160dp"
                                android:layout_marginEnd="@dimen/default_margin"
                                android:layout_marginTop="20dp"
                                android:src="#fff"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                                android:id="@+id/txt_title"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/large_margin"
                                android:textColor="@color/white"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                                android:textStyle="bold"
                                android:fontFamily="sans-serif-medium"
                                android:layout_marginEnd="@dimen/default_margin"
                                app:layout_constraintBottom_toTopOf="@id/txt_writer"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toLeftOf="@id/img_cover"
                                app:layout_constraintTop_toTopOf="@id/img_cover"
                                app:layout_constraintVertical_chainStyle="packed"
                                tools:text="Hyouka"/>

                        <TextView
                                android:id="@+id/txt_writer"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/large_margin"
                                android:maxLines="3"
                                android:ellipsize="end"
                                android:layout_marginEnd="@dimen/default_margin"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                                android:textColor="@color/white"
                                app:layout_constraintBottom_toBottomOf="@id/img_cover"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toLeftOf="@id/img_cover"
                                app:layout_constraintTop_toBottomOf="@id/txt_title"
                                app:layout_constraintVertical_chainStyle="packed"
                                tools:text="Yonezawa Honobu"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:fitsSystemWindows="true"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/default_margin"
                android:descendantFocusability="blocksDescendants"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borrowing_information"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorBlackPlaceHolder"/>


            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_specification"
                    android:layout_marginTop="@dimen/card_vertical_margin"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/card_horizontal_radius"
                    app:cardElevation="2dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/title"/>

                    <TextView
                            android:id="@+id/txt_spec_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="Hyouka"/>

                    <View style="@style/Divider"/>

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/writer"/>

                    <TextView
                            android:id="@+id/txt_spec_writer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="Yonezawa Honobu"/>

                    <View style="@style/Divider"/>


                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/isbn"/>

                    <TextView
                            android:id="@+id/txt_spec_ISBN"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="9786026383396"/>

                    <View style="@style/Divider"/>

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/borrowing_date"/>

                    <TextView
                            android:id="@+id/txt_spec_borrowing_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="10 Mei 2019"/>

                    <View style="@style/Divider"/>

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/return_date"/>

                    <TextView
                            android:id="@+id/txt_spec_return_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="20 Mei 2019"/>
                    <View style="@style/Divider"/>

                    <TextView
                            android:layout_marginTop="@dimen/card_vertical_margin"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:text="@string/pinalty"/>

                    <TextView
                            android:id="@+id/txt_spec_pinalty"
                            style="@style/CustomChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_vertical_margin"
                            android:maxLines="2"
                            android:layout_marginBottom="@dimen/default_margin"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="Rp. 20.000"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
